--- a/css/style.css
+++ b/css/style.css
@@ -6,24 +6,25 @@
 }
 
 body {
-  background-color: #0a0a0a;
+  background: linear-gradient(90deg, #001327, #1b0034);
   font-family: "Young Serif", serif;
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: top;
   align-items: center;
   height: 100vh;
   gap: 20px;
+  padding-top: 50px;
 }
 
 .container > h2 {
   color: #fff;
 }
 
-.modal {
+.show-modal {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -31,7 +32,7 @@ body {
   gap: 15px;
 }
 
-.modal > button {
+.show-modal > button {
   font-family: "Young Serif", serif;
   background: linear-gradient(
     90deg,
@@ -42,4 +43,56 @@ body {
   border: none;
   border-radius: 12px;
   padding: 15px 20px;
+  cursor: pointer;
+}
+
+.hidden {
+  display: none;
+}
+
+.close-modal {
+  position: absolute;
+  top: 1.2rem;
+  right: 2rem;
+  font-size: 3.5rem;
+  color: #e2e2e2;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+.close-modal:hover {
+  color: aquamarine;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  background: #00172e;
+  color: #fff;
+  padding: 6rem;
+  border-radius: 12px;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
+    rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
+    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+  z-index: 10;
+}
+
+.modal > h1 {
+  color: aquamarine;
+  padding-bottom: 10px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 9, 19, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 5;
 }
